--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "react-scripts": "5.0.1",
     "react-select": "5.7.3",
     "react-table": "7.8.0",
+    "react-toastify": "^9.1.3",
     "sweetalert2": "11.7.5",
     "uuid": "9.0.0",
     "vanilla-tilt": "1.8.0",
